# ado-gh-migrate-snyk-ignores

./: README.md  mapping.example.yaml  pyproject.toml
src/ado_gh_migration/: cli.py  config.py  mapping.py  signature.py  snyk_client.py  state.py
src/ado_gh_migration/stages/: apply.py  capture.py  map.py  report.py  verify.py
tests/: test_apply_csv.py  test_apply_decision.py  test_apply_execute.py  test_apply_propose.py  test_mapping.py  test_signature.py  test_state.py
