[project]
name = "ado-gh-migration"
version = "0.0.1"
description = "Migrate Snyk Code ignore policies and project metadata from Azure-Repos-imported targets to GitHub-imported targets within the same Snyk org."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "tenacity>=8.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[project.scripts]
ado-gh-migration = "ado_gh_migration.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ado_gh_migration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
